# solana-zk-example

./: Anchor.toml  README.md  package.json  receiver.ts  sender.ts
circuits/: Multiplier.circom
programs/mini-norma/: Cargo.toml
programs/mini-norma/src/: lib.rs
programs/verifier/: Cargo.toml
programs/verifier/src/: lib.rs  verifying_key.rs
programs/verifier/src/instructions/: mod.rs  verify.rs
scripts/: generate-zkey.sh  trusted-setup.sh
tests/: hooks.ts  mini-norma.ts  zk.ts
